# spatial-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
benches/: rstar.rs  rstar_bench.rs  rtree.rs
src/: geometry.rs  lib.rs  shapes.rs  tree.rs  vecext.rs
src/index/: mod.rs  r.rs  rstar.rs
src/tree/: mod.rs
src/tree/mbr/: leaf.rs  leafgeometry.rs  leafshape.rs  map.rs  mod.rs  node.rs  query.rs
src/tree/mbr/index/: mod.rs  r.rs  rstar.rs
src/tree/xmbr/: mod.rs  node.rs
src/tree/xmbr/index/: mod.rs
tests/: rstar.rs  rtree.rs
