[package]
name = "spatial"
version = "0.1.1"
authors = ["Adam Baxter"]
description = "An N-Dimensional R-tree family spatial tree implementations"
repository = "https://github.com/ambaxter/spatial-rs.git"
homepage = "https://github.com/ambaxter/spatial-rs"
documentation = "https://ambaxter.github.io/spatial/doc/spatial/index.html"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["spatial","geometry","tree","r-tree","rstar"]


[dependencies]
itertools = "0.4"
ordered-float = "0.2"
num = "0.1"
generic-array = "0.3"
typenum = "1.3"

[dev-dependencies]
approx = "0.1.0"
rand = "0.3"