[package]
name = "spatial"
version = "1.0.0"
authors = ["Adam Baxter"]
description = "An N-Dimensional R-tree family spatial tree implementations"
repository = "https://github.com/ambaxter/spatial-rs.git"
homepage = "https://github.com/ambaxter/spatial-rs"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["spatial","geometry","tree","r-tree","rstar"]


[dependencies]
itertools = "0.12"
ordered-float = "4"
num = "0.4"

[dev-dependencies]
approx = "0.5"
rand = "0.8"